<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.invitemember.QRScanActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInvite"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/button_shape_style"
            android:text="@string/invite"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>